# adhd-study

./: README.md  bugs.json  coding_1.ipynb  coding_2.ipynb  debugging_1.ipynb  debugging_2.ipynb  post_processing.ipynb  preprocessor.py  processing.ipynb  pyproject.toml  util.py
data/: dataset.csv
sources/user_1/: ide-events_filtered_1637086607020.1997_a83a3d4180b6c74dc2a94328106769b1203938e2.csv
sources/user_10/: ide-events_filtered_1168000087911.6772_3263bbef420b44a3a67544606cc99702ef54c419.csv
sources/user_11/: ide-events_filtered.csv
sources/user_12/: ide-events_filtered_855745757711.9337_330df99d1d43df6083e6e08aeeea52ada5d6c3d7.csv
sources/user_13/: ide-events_filtered.csv
sources/user_14/: ide-events_filtered_1618006307351.162_a638a8f284516fdf8242cf8e7592299f6236048b.csv
sources/user_15/: ide-events_filtered_1643608055783.72_77b882954f2b0bb203b8a027150806e60c82d90b.csv
sources/user_16/: ide-events_filtered_1555177077132.1414_8e998585a255e445712a10d95465bbf4c46b1936.csv
sources/user_17/: ide-events_filtered_268899418802.02475_6f81e834a08c6371701e1aec344c17bc1ceb5457.csv
sources/user_18/: ide-events_filtered.csv
sources/user_19/: ide-events_filtered_150080284821.62122_45ed4386b4dfbc74f7c453bfc2e715deaa96e0bb.csv
sources/user_2/: ide-events_filtered_1193540263063.7488_a1dffb2d52eca690309f90362e3976a418fb6b9e.csv
sources/user_20/: ide-events_filtered_1388122642087.329_2c1b7e6117479d15f5f2bf7c945c1826f29fa9e2.csv
sources/user_21/: ide-events_filtered_1472895989891.2976_a74fb5da4b72b2a2dcd742808d2521b83d2323a4.csv
(+164 files in other folders)
